--- a/index.html
+++ b/index.html
@@ -40,5 +40,9 @@ let topNews = async () => {
 
 topNews();
 
+var element = document.getElementById("top");
+element.onclick = function(event) {
+  console.log(event);
+}
 
 </script>
