--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@ let topNews = async () => {
 }
 
 topNews();
-
-var element = document.getElementById("top");
-element.onclick = function(event) {
-  console.log(event);
+var button = document.querySelector('top');
+button.onclick = function() {
+  
+}
+var button = document.querySelector('letest');
+button.onclick = function() {
+  
 }
 
 </script>
